Fix SideBar issues
Added:
* new config that checks if user wants visible sidebar on scroll when its not locked
* custom faSidebarRoll icon

Changed:
* darker footer color

Fixed:
* SideBar stack buttons when screen height is too low

--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -1,7 +1,7 @@
 @import "/src/styles/variables";
 footer {
   grid-area: footer;
-  background-color: $color-primary;
+  background-color: $color-primary-dark;
   display: flex;
   flex-direction: column;
   justify-content: center;
